Fazendo operações de produtos com soft delete